feat(condo): INFRA-501 move export meter readings to task (#5249)
* feat(condo): INFRA-501 added MeterReadingExportTask model, task and tests

* feat(condo): INFRA-501 added MeterReadingExportTask ui

* feat(condo): DOMA-501 added date processing in resolveInput

* feat(condo): INFRA-501 disable date when out of EXPORT_METER_READINGS_MONTHS_LIMIT

* feat(condo): INFRA-501 update submodule

* feat(condo): INFRA-501 remove redundant import

* feat(condo): INFRA-501 remove old export meter readings service

* feat(condo): INFRA-501 update schema

* feat(condo): INFRA-501 fix test

* feat(condo): INFRA-501 fixes after review

* feat(condo): INFRA-501 fixes after review, rebase

* feat(condo): INFRA-501 fixes after review

* feat(condo): INFRA-501 add logic of last reading in exportMeterReadings

* feat(condo): INFRA-501 fixes after review

* fix(condo): INFRA-501 rebase, recreate migration

* fix(condo): INFRA-501 fix sortBy type

* chore(condo): INFRA-501 fix locale in test

* chore(condo): INFRA-501 move submodule to main

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2390,6 +2390,11 @@
   "tasks.IncidentExportTask.progress.description.processing": "Incidents exported: {exported} of {total}",
   "tasks.IncidentExportTask.progress.description.completed": "File has been created",
   "tasks.IncidentExportTask.progress.description.completed.link.label": "Download",
+  "tasks.MeterReadingExportTask.progress.title": "Exporting meter readings",
+  "tasks.MeterReadingExportTask.progress.description.preparing": "Preparing to export meter readings",
+  "tasks.MeterReadingExportTask.progress.description.processing": "Meter readings exported: {exported} of {total}",
+  "tasks.MeterReadingExportTask.progress.description.completed": "File has been created",
+  "tasks.MeterReadingExportTask.progress.description.completed.link.label": "Download",
   "tasks.MeterReadingsImportTask.progress.title": "Import meter readings",
   "tasks.MeterReadingsImportTask.progress.description.preparing": "Preparing to import meter readings",
   "tasks.MeterReadingsImportTask.progress.description.processing": "Meter readings processed: {imported} of {total}",
@@ -2741,6 +2746,8 @@
   "api.resident.registerServiceConsumers.BILLING_ACCOUNT_OR_METER_NOT_FOUND": "No receipts or meters related to the entered account number were found. Please contact the management company.",
   "api.resident.sendMessageToResidentScopes.SCOPES_IS_EMPTY": "Scopes could not be empty",
   "api.resident.registerResident.ADDRESS_NOT_FOUND": "Address was not found",
+  "api.meterReadingExportTask.STATUS_IS_ALREADY_COMPLETED": "Task already completed successfully",
+  "api.meterReadingExportTask.STATUS_IS_ALREADY_ERROR": "The task has already completed with an error",
   "api.miniapp.sendB2CAppPushMessage.USER_NOT_FOUND": "Unable to find user by provided id.",
   "api.miniapp.sendB2CAppPushMessage.RESIDENT_NOT_FOUND": "Unable to find resident by provided id.",
   "api.miniapp.sendB2CAppPushMessage.APP_NOT_FOUND": "Unable to find app by provided id.",
@@ -2775,6 +2782,8 @@
   "excelExport.headers.contacts.email": "Email",
   "excelExport.headers.contacts.role": "Role",
   "excelExport.headers.contacts.isVerified": "Verified",
+  "excelExport.headers.meters.title": "Meter readings for all time",
+  "excelExport.headers.meters.forPeriod.title": "Meter readings for the period",
   "excelExport.headers.meters.date": "Reading date",
   "excelExport.headers.meters.address": "Address",
   "excelExport.headers.meters.unitName": "Unit",
