--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2390,6 +2390,11 @@
   "tasks.IncidentExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
   "tasks.IncidentExportTask.progress.description.completed": "Файл сформирован",
   "tasks.IncidentExportTask.progress.description.completed.link.label": "Скачать",
+  "tasks.MeterReadingExportTask.progress.title": "Выгрузка показаний ИПУ",
+  "tasks.MeterReadingExportTask.progress.description.preparing": "Подготовка к экспорту",
+  "tasks.MeterReadingExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
+  "tasks.MeterReadingExportTask.progress.description.completed": "Файл сформирован",
+  "tasks.MeterReadingExportTask.progress.description.completed.link.label": "Скачать",
   "tasks.MeterReadingsImportTask.progress.title": "Импорт ИПУ",
   "tasks.MeterReadingsImportTask.progress.description.preparing": "Подготовка к импорту",
   "tasks.MeterReadingsImportTask.progress.description.processing": "Обработано записей: {imported} из {total}",
@@ -2741,6 +2746,8 @@
   "api.resident.registerServiceConsumers.BILLING_ACCOUNT_OR_METER_NOT_FOUND": "Не удалось найти квитанции или счётчики по указанному лицевому счету. Пожалуйста, обратитесь в управляющую компанию.",
   "api.resident.sendMessageToResidentScopes.SCOPES_IS_EMPTY": "Необходимо передать хотя бы один элемент в scopes",
   "api.resident.registerResident.ADDRESS_NOT_FOUND": "Адрес не найден",
+  "api.meterReadingExportTask.STATUS_IS_ALREADY_COMPLETED": "Задача уже успешно выполнена",
+  "api.meterReadingExportTask.STATUS_IS_ALREADY_ERROR": "Задача уже завершилась с ошибкой",
   "api.miniapp.sendB2CAppPushMessage.USER_NOT_FOUND": "Не удалось найти пользователя по переданному id",
   "api.miniapp.sendB2CAppPushMessage.RESIDENT_NOT_FOUND": "Не удалось найти жителя по переданному id",
   "api.miniapp.sendB2CAppPushMessage.APP_NOT_FOUND": "Не удалось найти приложение по переданному id",
@@ -2775,6 +2782,8 @@
   "excelExport.headers.contacts.email": "Почта",
   "excelExport.headers.contacts.role": "Роль",
   "excelExport.headers.contacts.isVerified": "Верифицирован",
+  "excelExport.headers.meters.title": "Выгрузка показаний ИПУ за все время",
+  "excelExport.headers.meters.forPeriod.title": "Выгрузка показаний ИПУ за период",
   "excelExport.headers.meters.date": "Дата снятия",
   "excelExport.headers.meters.address": "Адрес",
   "excelExport.headers.meters.unitName": "Помещение",
