feat(condo): DOMA-10141 add column address and unitName to table in marketplace (#5309)
* feat(condo): DOMA-10141 add fileds address and unit

* feat(condo): DOMA-10141 add getFullUnitName function and add filters to columns address and unitName

* feat(condo): DOMA-10141 delete getUnitName and add getFullUnitName to tiket table

* feat(condo): DOMA-10141 change translation unitTypeMessage

* feat(condo): DOMA-10141 add variation for ticket and marketplace components

* Revert "feat(condo): DOMA-10141 delete getUnitName and add getFullUnitName to tiket table"

This reverts commit dd346f3467efbae6e4718255243823105154d294.

* feat(condo): DOMA-10141 change render unitName

* feat(condo): DOMA-10141 change translation and column size

* feat(condo): DOMA-10141 added sorting in ascending and descending order

* feat(condo): DOMA-10141 fix search in input

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1518,6 +1518,8 @@
   "pages.condo.marketplace.bankAccountErrorMessage": "Ошибка в номере расчетного счета",
   "pages.condo.marketplace.tinValidationErrorMessage": "Ошибка при проверке ИНН",
   "pages.condo.marketplace.routingNumberValidationErrorMessage": "БИК задан не верно",
+  "pages.condo.marketplace.invoice.filters.EnterAddress": "Введите адрес",
+  "pages.condo.marketplace.invoice.filters.EnterUnitName": "Введите номер помещения",
   "pages.condo.marketplace.invoice.create.title": "Новый счет",
   "pages.condo.marketplace.invoice.update.title": "Счет № {number}",
   "pages.condo.marketplace.invoice.form.property": "Адрес",
@@ -1589,6 +1591,7 @@
   "pages.condo.marketplace.invoice.id.field.paymentLink.copy": "Скопировать ссылку",
   "pages.condo.marketplace.invoice.id.title.payerData": "Данные плательщика",
   "pages.condo.marketplace.invoice.id.field.address": "Адрес",
+  "pages.condo.marketplace.invoice.id.field.unitName": "Помещение",
   "pages.condo.marketplace.invoice.id.field.contact": "Контакт",
   "pages.condo.marketplace.invoice.id.ticketAlert.message": "Счет привязан к заявке №{number}",
   "pages.condo.marketplace.invoice.id.ticketAlert.description": "Посмотреть заявку",
