--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1474,7 +1474,7 @@
   "pages.condo.marketplace.bills.empty.buttonText": "Issue an invoice",
   "pages.condo.marketplace.payments.empty.title": "There are no payments here yet",
   "pages.condo.marketplace.payments.empty.text": "As soon as the residents pay for the services via the mobile app or via the link, information about it will appear here",
-  "pages.condo.marketplace.payments.invoiceNumber": "invoice number",
+  "pages.condo.marketplace.payments.invoiceNumber": "Invoice number",
   "pages.condo.marketplace.payments.stats.allPayment": "Total (during the period):",
   "pages.condo.marketplace.payments.stats.donePayment": "Completed:",
   "pages.condo.marketplace.payments.stats.inProcessPayment": "Other:",
@@ -1518,6 +1518,8 @@
   "pages.condo.marketplace.bankAccountErrorMessage": "Bank account validation failed",
   "pages.condo.marketplace.tinValidationErrorMessage": "TIN validation failed",
   "pages.condo.marketplace.routingNumberValidationErrorMessage": "RoutingNumber is in a wrong format",
+  "pages.condo.marketplace.invoice.filters.EnterAddress": "Enter address",
+  "pages.condo.marketplace.invoice.filters.EnterUnitName": "Enter unit name",
   "pages.condo.marketplace.invoice.create.title": "New invoice",
   "pages.condo.marketplace.invoice.update.title": "Invoice № {number}",
   "pages.condo.marketplace.invoice.form.property": "Address",
@@ -1589,6 +1591,7 @@
   "pages.condo.marketplace.invoice.id.field.paymentLink.copy": "Copy link",
   "pages.condo.marketplace.invoice.id.title.payerData": "Payer data",
   "pages.condo.marketplace.invoice.id.field.address": "Address",
+  "pages.condo.marketplace.invoice.id.field.unitName": "Unit",
   "pages.condo.marketplace.invoice.id.field.contact": "Contact",
   "pages.condo.marketplace.invoice.id.ticketAlert.message": "Invoice connected to ticket №{number}",
   "pages.condo.marketplace.invoice.id.ticketAlert.description": "View ticket",
