fix(condo): DOMA-9326 use sentAt instead of Date.now() (#5300)
* fix(condo): DOMA-9326 use sentAt instead of Date.now()

* fix(condo): DOMA-9326 alter translation

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2021,7 +2021,7 @@
   "news.CancelSendMessage": "Не отправлять",
   "news.DeprecateTitle": "Сделать неактуальной",
   "news.ConfirmDeprecateTitle": "Сделать новость неактуальной",
-  "news.ConfirmDeprecateMessage": "Новость пропадет с главного экрана мобильного приложения – останется в push-уведомлениях и архиве",
+  "news.ConfirmDeprecateMessage": "Новость больше не будет показываться на главном экране приложения, её можно будет увидеть только в ленте или разделе уведомлений. Информация в приложении обновится \u2028в течение суток.",
   "news.CancelMessage": "Оставить",
   "TicketDeadline": "Срок выполнения заявки",
   "TicketDeferredDeadline": "Срок отложенности заявки",
