--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -466,7 +466,7 @@
   "ContactSupportToCancelIntegration": "To cancel integration contact support of «{company}».",
   "ClickToSeeMore": "Click to see more information",
   "ClearAllFilters": "Clear",
-  "component.CookieAgreement.title": "We use Cookie.",
+  "component.CookieAgreement.title": "We use Cookies.",
   "component.CookieAgreement.description": "DOMA LLC uses cookies to personalize services and user convenience. Cookies allow you to log in without re-entering your username and password. You can delete cookies or opt out of using them in your browser settings.",
   "component.CookieAgreement.action.accept": "Accept",
   "component.CookieAgreement.action.expand": "Read more",
