--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1814,12 +1814,13 @@
   "meter.import.error.MeterNumberExistInOrganization": "Meter with this number already exists in your organization",
   "meter.import.error.MeterResourceNotFound": "Meter type was not found according to specified abbreviation in \"Type\" column",
   "meter.import.error.MeterValueInvalid": "Incorrect format in column \"{columnName}\", must be a positive numeric value",
-  "api.meter.registerMetersReadings.INVALID_DATE:": "Incorrect date format in column \"{columnName}\". Use either value of \"Text\" type in format: \"{format}\"",
-  "meter.import.error.WrongDateOrMonthFormatMessage": "Wrong date format in column \"{columnName}\". Use either value of \"Text\" formats \"{dateFormat}\" or \"{monthFormat}\" (for month-only)",
+  "api.meter.registerMetersReadings.INVALID_DATE": "Incorrect date format in column \"{columnName}\". Use either value of \"Text\" type in format: \"{format}\", or value of \"Date\" type",
+  "meter.import.error.WrongDateOrMonthFormatMessage": "Wrong date format in column \"{columnName}\". Use either value of \"Text\" formats \"{dateFormat}\" or \"{monthFormat}\" (for month-only); or value of \"Date\" type",
   "meter.import.error.unknownResourceType": "Unknown resource type. Please use one of the following: {knownList} at column \"Type\"",
   "meter.import.error.unknownUnitType": "Unknown unit type. Please use one of the following: {knownList} at column \"Unit type\"",
   "meter.import.error.unknownIsAutomatic": "Unknown value for Automatic. Please use one of the following: {knownList}",
   "meter.import.error.ZeroValuesSpecified": "At least one of values must be specified",
+  "meter.import.error.InvalidDate": "Incorrect date format in column \"{columnName}\". Use either value of \"Text\" type in format: \"{format}\", or value of \"Date\" type",
   "api.meter.registerMetersReadings.INVALID_ACCOUNT_NUMBER": "Account number field is filled incorrectly",
   "api.meter.registerMetersReadings.INVALID_METER_NUMBER": "Meter number field is filled incorrectly",
   "meter.import.value.meterResourceType.hotWater": "HW",
