--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1814,12 +1814,13 @@
   "meter.import.error.MeterNumberExistInOrganization": "Прибор учета с таким номером уже существует в вашей организации",
   "meter.import.error.MeterResourceNotFound": "Не найден тип счётчика по указанной аббревиатуре",
   "meter.import.error.MeterValueInvalid": "Неверное значение в столбце \"{columnName}\", должно быть положительное число",
-  "api.meter.registerMetersReadings.INVALID_DATE:": "Неверное значение даты в столбце \"{columnName}\". Используйте значение с типом ячейки \"Текстовый\" в формате \"{format}\"",
-  "meter.import.error.WrongDateOrMonthFormatMessage": "Неверное значение даты в столбце \"{columnName}\". Используйте значение с типом ячейки \"Текстовый\" в форматах \"{dateFormat}\" или \"{monthFormat}\" (для указания только месяца)",
+  "api.meter.registerMetersReadings.INVALID_DATE": "Неверное значение даты в столбце \"{columnName}\". Используйте значение с типом ячейки \"Текстовый\" в формате \"{format}\", либо значение с типом \"Дата\"",
+  "meter.import.error.WrongDateOrMonthFormatMessage": "Неверное значение даты в столбце \"{columnName}\". Используйте значение с типом ячейки \"Текстовый\" в форматах \"{dateFormat}\" или \"{monthFormat}\" (для указания только месяца); либо значение с типом \"Дата\"",
   "meter.import.error.unknownResourceType": "Неизвестный тип счетчика. Введите один из списка: {knownList} в столбце \"Тип счетчика\"",
   "meter.import.error.unknownUnitType": "Неизвестный тип помещения. Введите один из списка: {knownList} в столбце \"Тип помещения\"",
   "meter.import.error.unknownIsAutomatic": "Неизвестное значение в поле \"Автоматический\". Используйте одно из списка: {knownList}",
   "meter.import.error.ZeroValuesSpecified": "Должно быть указано как минимум одно из показаний",
+  "meter.import.error.InvalidDate": "Неверное значение даты в столбце \"{columnName}\". Используйте значение с типом \"Текстовый\" в формате \"{format}\", либо значение с типом \"Дата\"",
   "api.meter.registerMetersReadings.INVALID_ACCOUNT_NUMBER": "Указан некорректный лицевой счет",
   "api.meter.registerMetersReadings.INVALID_METER_NUMBER": "Указан некорректный номер счетчика",
   "meter.import.value.meterResourceType.hotWater": "ГВС",
