feat(registry): DOMA-9269 new registry upload flow (#5027)
* feat(condo): DOMA-9269 move receipts upload to extension tab

* feat(condo): DOMA-9269 added choose custom columns and ui fixes

* fix(condo): DOMA-9269 add icon beside text to table cell render

* feat(registry): DOMA-10076 added editing of address cell in table

* feat(condo): DOMA-9269 added tooltip props to renders

* fix(condo): DOMA-9269 force reload after condo-bridge redirect

* refactor(condo): DOMA-9269 rebased registry

* fix(condo): DOMA-9269 removed unused style prop from iframe

* feat(registry): DOMA-9269 added two flows of address fixing (addressTransform and one-time)

* fix(condo): DOMA-9269 remove iframe scrolling prop

* fix(registry): DOMA-10505 fixed precise money rendering in history, fixed services render

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2542,6 +2542,7 @@
   "pages.billing.NoBilling.button": "View list of integrations",
   "pages.billing.ReceiptsTable.PDFTooltip": "View PDF-receipt",
   "pages.billing.ReceiptsTable.loadRegistry.button": "Load registry",
+  "pages.billing.registry.uploadPage.title": "Registry upload",
   "pages.billing.Status.success.title": "Payments from individuals are enabled",
   "WillBeReadySoon": "Everything will be ready soon",
   "Accruals": "Accruals",
