chore(condo): DOMA-10531 meters billing integration improvements (#5398)
* chore(meters-billing-integration): DOMA-10531 add new meter reading source for kvp24 integration

* chore(condo): DOMA-10531 add access rules for meterReading's billing status fields

+ ability to pass billingStatus and billingStatusText to readings uni-mutation

* chore(condo): DOMA-10531 update miniapp submodule

* chore(condo): DOMA-10531 update migration after rebase

* chore(condo): DOMA-10531 update migration after rebase

* chore(condo): DOMA-10531 rename "kvp24 integration" to "external integration"

* chore(condo): DOMA-10531 (submodule) rename "kvp24 integration" to "external integration"

* chore(condo): DOMA-10531 move `canEditBillingStatusFields` to access folder

* chore(condo): DOMA-10531 add a test that service user without access right can not edit billing status fields

* chore(condo): DOMA-10531 updated schema.*

* chore(condo): DOMA-10531 updated migration

* fix(condo): DOMA-10531 fix linter error

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1764,6 +1764,7 @@
   "meterReadingSource.Messenger.name": "Messengers (tg, whatsapp, viber, ..)",
   "meterReadingSource.SocialNetwork.name": "Social media (vk, fb, ..)",
   "meterReadingSource.MobileAppStaff.name": "Staff mobile app",
+  "meterReadingSource.externalIntegration.name": "External integration",
   "meterReadingSource.crm.name": "CRM",
   "meterResource.ColdWater.name": "Cold water",
   "meterResource.HotWater.name": "Hot water",
