--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1764,6 +1764,7 @@
   "meterReadingSource.Messenger.name": "Мессенджеры (tg, whatsapp, viber, ..)",
   "meterReadingSource.SocialNetwork.name": "Соц. сети (vk, fb, ..)",
   "meterReadingSource.MobileAppStaff.name": "ЛК приложение сотрудника",
+  "meterReadingSource.externalIntegration.name": "Внешняя интеграция",
   "meterReadingSource.crm.name": "CRM",
   "meterResource.ColdWater.name": "Холодная вода",
   "meterResource.HotWater.name": "Горячая вода",
