fix(condo): DOMA-10553 fix translation & add new test case (#5417)
* fix(condo): DOMA-10553 fix translation & add new test case

* fix(condo): DOMA-10553 rebased code

* fix (condo): DOMA-10553 update schema

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1815,8 +1815,8 @@
   "meter.import.error.MeterNumberExistInOrganization": "Meter with this number already exists in your organization",
   "meter.import.error.MeterResourceNotFound": "Meter type was not found according to specified abbreviation in \"Type\" column",
   "meter.import.error.MeterValueInvalid": "Incorrect format in column \"{columnName}\", must be a positive numeric value",
-  "api.meter.registerMetersReadings.INVALID_DATE": "Incorrect date format in column \"{columnName}\". Use either value of \"Text\" type in format: \"{format}\", or value of \"Date\" type",
-  "meter.import.error.WrongDateOrMonthFormatMessage": "Wrong date format in column \"{columnName}\". Use either value of \"Text\" formats \"{dateFormat}\" or \"{monthFormat}\" (for month-only); or value of \"Date\" type",
+  "api.meter.registerMetersReadings.INVALID_DATE": "Incorrect date format in column \"{columnName}\". Use value of \"Text\" type in format: \"{format}\".",
+  "meter.import.error.WrongDateOrMonthFormatMessage": "Wrong date format in column \"{columnName}\". Use value of \"Text\" formats \"{dateFormat}\" or \"{monthFormat}\" (for month-only).",
   "meter.import.error.unknownResourceType": "Unknown resource type. Please use one of the following: {knownList} at column \"Type\"",
   "meter.import.error.unknownUnitType": "Unknown unit type. Please use one of the following: {knownList} at column \"Unit type\"",
   "meter.import.error.unknownIsAutomatic": "Unknown value for Automatic. Please use one of the following: {knownList}",
