feat(condo): DOMA-10397 add act of paid works in ticket (#5370)
* feat(condo): DOMA-10397 first commit

* feat(condo): DOMA-10397 second commit

* feat(condo): DOMA-10397 third commit

* feat(condo): DOMA-10397 four commit

* feat(condo): DOMA-10397 five commit

* feat(condo): DOMA-10397 add lib to convert number in word

* feat(condo): DOMA-10397 remove iec from invoice and add iec from infoClient

* feat(condo): DOMA-10397 add en lang

* feat(condo): DOMA-10397 fix review

* feat(condo): DOMA-10397 add isValidInvoice

* feat(condo): DOMA-10397 complited

* feat(condo): DOMA-10397 add logger

* feat(condo): DOMA-10397 fix mistake in logger.info

* feat(condo): DOMA-10397 add function numberInWords

* feat(condo): DOMA-10397 fix lint

* feat(condo): DOMA-10397 delete function numbersInWords

* feat(condo): DOMA-10397 fix

* feat(condo): DOMA-10397 refactor

* feat(condo): add class ToWords

* feat(condo): DOMA-10397 add tests for moneyToWords

* feat(condo): DOMA-10397 fix lint

* feat(condo): DOMA-10397 change paidWorks and money

* feat(condo): DOMA-10397 change test and fix paidWorks

* feat(condo): DOMA-10397 fix

* feat(condo): DOMA-10397 change 10000

* feat(condo): DOMA-10397 add tests

* feat(condo): DOMA-10397 fix lint

* feat(condo): DOMA-10397 can i have the last commit

* feat(condo): DOMA-10397 update dischard

* feat(condo): reset new structure

* feat(condo): DOMA-10397 Math.floor instead of bitwise operation

* feat(condo): DOMA-10397 add TODO

* feat(condo): DOMA-10397 reset migration

* feat(condo): DOMA-10397 add migrate

* feat(condo): DOMA-10397 add schema

* feat(condo): DOMA-10397 add miss

* feat(condo): DOMA-10397 fix schema

* feat(condo): DOMA-10397 fix schema new line

* feat(condo): DOMA-10397 fix en test

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -917,6 +917,7 @@
   "pages.condo.ticket.exportBlank.HideAllComments.label": "Hide comments",
   "pages.condo.ticket.generateDocument.label": "Generate document",
   "pages.condo.ticket.generateDocument.completionWorks.label": "Work completion certificate",
+  "pages.condo.ticket.generateDocument.paidWorks.label": "Work completion certificate (paid)",
   "pages.condo.ticket.select.group.flat": "Flats",
   "pages.condo.ticket.select.group.parking": "Parking units",
   "pages.condo.ticket.select.group.apartment": "Apartments",
