fix(condo): DOMA-10315 fixed archived meter warning (#5470)

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1065,8 +1065,8 @@
   "pages.condo.meter.UpdateMeterReading.Modal.Title": "Edit readings",
   "pages.condo.meter.UpdateMeterReading.Modal.Text": "Enter new readings for the meter No.{number}",
   "pages.condo.meter.nextVerificationTip": "You should verify this metering device soon, it's next verification date is",
-  "pages.condo.meter.archivedMeterTip.Message": "Meter {notShowing} in the resident's mobile app",
-  "pages.condo.meter.archivedMeterTip.NotShowing": "is not shown",
+  "pages.condo.meter.archivedMeterTip.Message": "It is {notShowing} to send readings via the resident's mobile app",
+  "pages.condo.meter.archivedMeterTip.NotShowing": "not allowed",
   "pages.condo.meter.MeterWithSameNumberIsExist": "Meter with same number exist in organization",
   "pages.condo.meter.MeterWithSameAccountNumberIsExist": "Such a account number already exists in another unit",
   "pages.condo.meter.Resource.placeholder": "Specify the type of meter",
