--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1065,8 +1065,8 @@
   "pages.condo.meter.UpdateMeterReading.Modal.Title": "Редактировать показания",
   "pages.condo.meter.UpdateMeterReading.Modal.Text": "Внесите новые показания по счетчику №{number}",
   "pages.condo.meter.nextVerificationTip": "Скоро нужно провести поверку, ее дата",
-  "pages.condo.meter.archivedMeterTip.Message": "Прибор учета {notShowing} в мобильном приложении жителя",
-  "pages.condo.meter.archivedMeterTip.NotShowing": "не отображается",
+  "pages.condo.meter.archivedMeterTip.Message": "По нему {notShowing} через мобильное приложение жителя",
+  "pages.condo.meter.archivedMeterTip.NotShowing": "нельзя отправлять показания",
   "pages.condo.meter.MeterWithSameNumberIsExist": "Прибор учета с таким номером уже существует в организации",
   "pages.condo.meter.MeterWithSameAccountNumberIsExist": "Такой лицевой счет уже существует в другой квартире",
   "pages.condo.meter.Resource.placeholder": "Укажите тип счетчика",
