fix(condo): DOMA-10763 add support unitType and add translations for acts (#5557)
* fix(condo): DOMA-10763 add support unitType and add translations for acts

* fix(condo): DOMA-10763 fix translation

* fix(condo): DOMA-10763 fix translation key and add default value

* fix(condo): DOMA-10763 add 'flat' as default value

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1001,6 +1001,11 @@
   "field.UnitType.prefix.parking": "PP",
   "field.UnitType.prefix.warehouse": "WH",
   "field.UnitType.warehouse": "Warehouse unit",
+  "field.UnitType.act.warehouse": "Warehouse",
+  "field.UnitType.act.apartment": "Apartment",
+  "field.UnitType.act.commercial": "Commercial unit",
+  "field.UnitType.act.flat": "Flat",
+  "field.UnitType.act.parking": "Parking place",
   "field.email.requiredError": "Enter email",
   "field.floorName": "Floor",
   "field.required": "This field is required — please fill it out",
