--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -1001,6 +1001,11 @@
   "field.UnitType.prefix.parking": "ММ",
   "field.UnitType.prefix.warehouse": "КЛ",
   "field.UnitType.warehouse": "Кладовая",
+  "field.UnitType.act.warehouse": "Кладовой",
+  "field.UnitType.act.apartment": "Апартаментов",
+  "field.UnitType.act.commercial": "Коммерческого помещения",
+  "field.UnitType.act.flat": "Квартиры",
+  "field.UnitType.act.parking": "Машиноместа",
   "field.email.requiredError": "Укажите email",
   "field.floorName": "Этаж",
   "field.required": "Это обязательное поле — заполните его",
