--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -1001,6 +1001,11 @@
   "field.UnitType.prefix.parking": "Plaza de coche",
   "field.UnitType.prefix.warehouse": "Trastero",
   "field.UnitType.warehouse": "Trastero",
+  "field.UnitType.act.warehouse": "Trastero",
+  "field.UnitType.act.apartment": "Apartamento",
+  "field.UnitType.act.commercial": "Local comercial",
+  "field.UnitType.act.flat": "Piso",
+  "field.UnitType.act.parking": "Plaza de coche",
   "field.email.requiredError": "Introduzca el correo electrónico",
   "field.floorName": "Planta",
   "field.required": "Este es un campo obligatorio — rellénelo",
