feat(condo): DOMA-10516 reassign employee ticket (#5563)
* feat(condo): DOMA-10516 first commit

* feat(condo): DOMA-10516 add access for bulk operation in ticket

* feat(condo): DOMA-10516 main commit

* feat(condo): DOMA-10516 small commit

* feat(condo): DOMA-10516 delete unusage icons

* feat(condo): DOMA-10516 add new logic

* feat(condo): DOMA-10516 add types in components

* feat(condo): DOMA-10516 change name and rewrite access

* feat(condo): DOMA-10516 first commit

* feat(condo): DOMA-10516 add access for bulk operation in ticket

* feat(condo): DOMA-10516 main commit

* feat(condo): DOMA-10516 small commit

* feat(condo): DOMA-10516 delete unusage icons

* feat(condo): DOMA-10516 add new logic

* feat(condo): DOMA-10516 add types in components

* feat(condo): DOMA-10516 change name and rewrite access

* feat(condo): DOMA-10516 add more test cases and rewrite access logic

* feat(condo): DOMA-10516 remove redirent

* feat(condo): DOMA-10516 add callcenter logic for this feature

* feat(condo): DOMA-10516 add types

* feat(condo): DOMA-10516 fix review

* feat(condo): DOMA-10516 update main

* feat(condo): DOMA-10516 add callcenter commit

* feat(condo): DOMA-10516 wait persistor

* feat(condo): DOMA-10516 wait persistor

* feat(condo): DOMA-10516 add commit from callcenter

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -702,7 +702,7 @@
   "employee.AllSpecializations": "all specializations",
   "employee.BlockUser": "Block user",
   "employee.CanNotBlockYourself": "(you can't block yourself)",
-  "employee.ConfirmDeleteMessage": "All data about him will be erased forever",
+  "employee.ConfirmDeleteMessage": "The data will not be recoverable and the employee will not be able to log in to the platform.",
   "employee.ConfirmDeleteTitle": "Delete an employee?",
   "employee.EmployeeDidntEntered": "User has not logged into CRM.",
   "employee.EmptyList.header": "No employees yet",
@@ -719,6 +719,18 @@
   "employee.emptyList.description": "Your employer has blocked you from the organization",
   "employee.emptyList.title": "You are blocked",
   "employee.isBlocked": "blocked",
+  "employee.reassignTickets.title": "Who should I assign employee requests to tickets?",
+  "employee.reassignTickets.buttonContent.deleteUser": "Remove employee without reassignment",
+  "employee.reassignTickets.buttonContent.reassignTickets": "Delete employee and reassign requests",
+  "employee.reassignTickets.alert.title": "{employeeName} is assigned to multiple tickets",
+  "employee.reassignTickets.alert.message": "Reassign tickets to new employees",
+  "employee.reassignTickets.notification.title.warning": "Do not close the tab",
+  "employee.reassignTickets.notification.title.error": "An error occurred",
+  "employee.reassignTickets.notification.title.success": "Ready",
+  "employee.reassignTickets.notification.message.warning": "Reassigning requests to another employee",
+  "employee.reassignTickets.notification.message.error": "Please try again later",
+  "employee.reassignTickets.notification.message.success": "The employee has been removed and his requests have been reassigned to another employee.",
+  "employee.reassignTickets.notification.progress": "Tickets reassigned: {updatedTicketsCount} out of {activeTicketsOrganizationEmployeeCount}",
   "employee.role.Administrator.description": "The administrator has full access to the data and functions of the Doma.ai platform: he can delete, create or edit anything he wants. Administrators control the created organizations. An organization can have an unlimited number of administrators.",
   "employee.role.Administrator.name": "Administrator",
   "employee.role.Contractor.description": "The contractor performs work according to the assigned tickets. He does not have access to other sections and features of the Doma.ai platform.",
