--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -719,6 +719,18 @@
   "employee.emptyList.description": "Su empleador le ha bloqueado en la organización",
   "employee.emptyList.title": "Usted está bloqueado",
   "employee.isBlocked": "bloqueado",
+  "employee.reassignTickets.title": "¿A quién debo asignar las solicitudes de los empleados?",
+  "employee.reassignTickets.buttonContent.deleteUser": "Eliminar a un empleado sin reasignación",
+  "employee.reassignTickets.buttonContent.reassignTickets": "Eliminar un empleado y reasignar aplicaciones",
+  "employee.reassignTickets.alert.title": "{employeeName} está asignado a varios tickets",
+  "employee.reassignTickets.alert.message": "Para evitar perderlos, designe un nuevo albacea entre sus empleados.",
+  "employee.reassignTickets.notification.title.warning": "No cierres la pestaña",
+  "employee.reassignTickets.notification.title.error": "Se produjo un error",
+  "employee.reassignTickets.notification.title.success": "Listo",
+  "employee.reassignTickets.notification.message.warning": "Reasignar solicitudes a otro empleado",
+  "employee.reassignTickets.notification.message.error": "Por favor inténtalo de nuevo más tarde.",
+  "employee.reassignTickets.notification.message.success": "El empleado es eliminado y sus solicitudes se reasignan a otro empleado.",
+  "employee.reassignTickets.notification.progress": "Boletos reasignados: {updatedTicketsCount} de {activeTicketsOrganizationEmployeeCount}",
   "employee.role.Administrator.description": "El administrador tiene acceso total a los datos y funciones de Doma: puede borrar, crear o editar cualquier cosa. Los administradores controlan las organizaciones creadas: una organización puede tener un número ilimitado de empleados con este tipo de acceso.",
   "employee.role.Administrator.name": "Administrador",
   "employee.role.Contractor.description": "Contratista realiza trabajos sobre solicitudes asignadas. No tiene acceso a otras secciones y funcionalidades de la plataforma Doma.ai.",
