--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -702,7 +702,7 @@
   "employee.AllSpecializations": "Все типы работ",
   "employee.BlockUser": "Заблокировать пользователя",
   "employee.CanNotBlockYourself": "(вы не можете заблокировать себя)",
-  "employee.ConfirmDeleteMessage": "Все данные о нём сотрутся навсегда",
+  "employee.ConfirmDeleteMessage": "Данные нельзя будет восстановить, а сотрудник не сможет войти на платформу",
   "employee.ConfirmDeleteTitle": "Удалить сотрудника?",
   "employee.EmployeeDidntEntered": "Пользователь не заходил в CRM.",
   "employee.EmptyList.header": "Пока сотрудников нет",
@@ -719,6 +719,18 @@
   "employee.emptyList.description": "Ваш работодатель заблокировал вас в организации",
   "employee.emptyList.title": "Вы заблокированы",
   "employee.isBlocked": "заблокирован",
+  "employee.reassignTickets.title": "На кого назначить заявки сотрудника?",
+  "employee.reassignTickets.buttonContent.deleteUser": "Удалить сотрудника без переназначения",
+  "employee.reassignTickets.buttonContent.reassignTickets": "Удалить сотрудника и переназначить заявки",
+  "employee.reassignTickets.alert.title": "{employeeName} назначен на несколько заявок",
+  "employee.reassignTickets.alert.message": "Чтобы не потерять их, назначьте нового исполнителя среди сотрудников",
+  "employee.reassignTickets.notification.title.warning": "Не закрывайте вкладку",
+  "employee.reassignTickets.notification.title.error": "Возникла ошибка",
+  "employee.reassignTickets.notification.title.success": "Готово",
+  "employee.reassignTickets.notification.message.warning": "Переназначение заявок на другого сотрудника",
+  "employee.reassignTickets.notification.message.error": "Попробуйте повторить попытку позже",
+  "employee.reassignTickets.notification.message.success": "Сотрудник удален, а его заявки переназначены на другого сотрудника",
+  "employee.reassignTickets.notification.progress": "Переназначено заявок: {updatedTicketsCount} из {activeTicketsOrganizationEmployeeCount}",
   "employee.role.Administrator.description": "Администратору предоставлен полный доступ к данным и функциям Домов: он может удалять, создавать или редактировать все что угодно. Администраторы контролируют созданные организации: у одной может быть неограниченное количество администраторов.",
   "employee.role.Administrator.name": "Администратор",
   "employee.role.Contractor.description": "Подрядчик выполняет работы по назначенным заявкам. У него нет доступа к другим разделам и возможностям платформы Doma.ai.",
